--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "wdelfuego/nova-calendar",
-    "description": "A powerful event calendar Tool for Laravel's Nova 4.",
+    "name": "monty/calendar",
+    "description": "just testing.",
     "keywords": [
         "laravel",
         "nova",
